@@ -1,3 +1,11 @@
+Fri Sep 17 09:17:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Utils/Synch_Refcountable.h:
+        * tao/Utils/Synch_Refcountable.inl:
+        * tao/Utils/Synch_Refcountable.cpp:
+          Removed these files, not used anymore, ACE_Atomic_Op is what is used
+          instead
+
 Fri Sep 17 06:26:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
